--- a/5/KP.vcxproj
+++ b/5/KP.vcxproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Matrix.cpp" />
-    <ClCompile Include="MatrixHandlecpp.cpp" />
+    <ClCompile Include="MatrixHandle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h" />
